# actix-blog

./: .gitignore  Cargo.toml  Dockerfile
posts/baby-cake/: post_frontmatter.toml
src/: main.rs
src/handlers/: home_handler.rs
templates/: base.html  home.html  post.html
