[package]
name = "actix-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.20.0"
actix-web = "4.9.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
actix-files = "0.6.6"
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"]}
ignore = "0.4.23"
toml = "0.8.19"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
